logs/Slang/chapter-9/9.4.2.3--event_conditional.sv.log
name: event_conditional
description: event conditional
should_fail: 0
tags: 9.4.2.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.2.3--event_conditional.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.2.3--event_conditional.sv:12:19: error: language feature not yet supported
	always @(posedge clk iff en == 1)
	                 ^~~~~~~~~~~~~~~
